tried to fix the blur bg on mobile

--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -18,6 +18,7 @@
       --code-text: #595959;
       --share-text: #666666;
       --transpa: rgba(237, 221, 213, 0.65)
+      --transpa-mob: rgba(237, 221, 213, 0.8)
   }
 }
 // -------------- THEME SWITCHER -------------- //
@@ -35,6 +36,7 @@
       --code-text: #595959;
       --share-text: #666666;
       --transpa: rgba(18, 18, 18, 0.3)
+      --transpa-mob: rgba(18, 18, 18, 0.8)
   };
 }
 
@@ -688,7 +690,7 @@ mark {
 // -------------- PROGRESS BAR -------------- //
 #progress-bar {
   --scrollAmount: 0%;
-  background-color: var(--code-text);
+  background-color: var(--links);
   width: var(--scrollAmount);
   height: 8px;
   position: fixed;
@@ -887,6 +889,21 @@ blockquote p {
   width: 100%;
 }
 
+ul {
+  width: 70%;
+}
+
+.post-index-title-big {
+  font-family: "neue-haas-grotesk-display", sans-serif;
+  font-size: 4rem;
+  color: var(--text);
+  line-height: 3.8rem;
+  margin-top: -18px;
+  margin-bottom: 0px;
+  margin-left: 0;
+  width: fit-content;
+  text-align: justify;
+}
 
 // -------------- MENU MOBILE -------------- //
 #menu-toggle {
@@ -906,8 +923,10 @@ blockquote p {
   padding-right: 20px;
   background-color: var(--transpa);
   backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   border-radius: 500px;
 }
+
 
 .menu {
   transition: all 0.3s ease-in-out;
@@ -927,6 +946,7 @@ blockquote p {
   transition: all 0.3s ease-in-out;
   transform: scale(1);
   backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   padding-top: 10%;
 }
 
